# Modules

./: CMakeLists.txt  README.md
ModuleLib/: CMakeLists.txt  ModuleManager.cpp
ModuleLib/include/: IModule.h  ModuleManager.h
TestApp/: ApplicationModule.cpp  ApplicationModule.h  CMakeLists.txt  IApplicationModule.h  ILogModule.h  LogModule.cpp  LogModule.h  main.cpp
