cmake_minimum_required (VERSION 3.0)

project(ModuleLib)

set(MODULELIB_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB MODULELIB_HEADERS "${MODULELIB_INCLUDE}/*.h")
file(GLOB MODULELIB_SRC "*.cpp")

add_library(ModuleLib ${MODULELIB_SRC} ${MODULELIB_HEADERS})

set(MODULELIB_INCLUDE ${MODULELIB_INCLUDE} PARENT_SCOPE)
